--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Gleb Bahmutov <gleb@cypress.io>",
   "license": "ISC",
   "devDependencies": {
+    "cypress": "3.3.0",
     "ok-file": "1.4.0"
   },
   "repository": {
